SIMD Intrinsics Fortran bindings/GMS_avx512_wrappers_.h

// Compile it as a C-code

    // Interoperable with corresponding Fortran derived type

        typedef struct __attribute__((align(64))) v8f64 {
                 double v[8];
        }v8f64;
	unsigned char  v8f64_cmp_pd_mask(v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmp_pd_mask(unsigned char, v8f64, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmp_round_pd_mask(v8f64, v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmp_round_pd_mask(unsigned char, v8f64, v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmpeq_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmpeq_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmpunord_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmpunord_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmpord_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmpord_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmpnlt_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmpnlt_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmpnle_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmpnle_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmpneq_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmpneq_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmplt_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmplt_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_cmple_pd_mask(v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	unsigned char  v8f64_mask_cmple_pd_mask(unsigned char, v8f64, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_rcp14_pd(v8f64, unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_rcp14_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_rcp14_pd(v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_rsqrt14_pd(v8f64, unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_rsqrt14_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_rsqrt14_pd(v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_sqrt_pd(v8f64, unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));