SIMD Intrinsics Fortran bindings/GMS_avx512_bindings.f90


        interface
           function v8f64_cmp_pd_mask(a,b,imm8) &
                bind(c,name='v8f64_cmp_pd_mask')
                import :: v8f64
                type(v8f64),    intent(in)        :: a
                type(v8f64),    intent(in)        :: b
                integer(c_int), intent(in), value :: imm8
                integer(c_char) :: v8f64_cmp_pd_mask
           end function v8f64_cmp_pd_mask
        end interface

        interface
           function v8f64_mask_cmp_pd_mask(k1,a,b,imm8) &
                bind(c,name='v8f64_mask_cmp_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_int),   intent(in), value :: imm8
                integer(c_char) :: v8f64_mask_cmp_pd_mask
           end function v8f64_mask_cmp_pd_mask
        end interface

        interface
           function v8f64_cmp_round_pd_mask(a,b,imm8,sae) &
                bind(c,name='v8f64_cmp_round_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_int),   intent(in), value :: imm8
                integer(c_int),   intent(in), value :: sae
                integer(c_char) :: v8f64_cmp_round_pd_mask
           end function v8f64_cmp_round_pd_mask
        end interface

        interface
           function v8f64_mask_cmp_round_pd_mask(k1,a,b,imm8,sae) &
                bind(c,name='v8f64_mask_cmp_round_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_int),   intent(in), value :: imm8
                integer(c_int),   intent(in), value :: sae
                integer(c_char) :: v8f64_mask_cmp_round_pd_mask
           end function v8f64_mask_cmp_round_pd_mask
        end interface

        interface
           function v8f64_cmpeq_pd_mask(a,b) &
                bind(c,name='v8f64_cmpeq_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmpeq_pd_mask
           end function v8f64_cmpeq_pd_mask
        end interface

        interface
           function v8f64_mask_cmpeq_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmpeq_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmpeq_pd_mask
            end function v8f64_mask_cmpeq_pd_mask
        end interface

        interface
           function v8f64_mask_cmpunord_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmpunord_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmpunord_pd_mask
           end function v8f64_mask_cmpunord_pd_mask
        end interface

        interface
           function v8f64_cmpunord_pd_mask(a,b) &
                bind(c,name='v8f64_cmpunord_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmpunord_pd_mask
           end function v8f64_cpmunord_pd_mask
        end interface

        interface
           function v8f64_cmpord_pd_mask(a,b) &
                bind(c,name='v8f64_cmpord_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmpord_pd_mask
           end function v8f64_cmpord_pd_mask
        end interface

        interface
           function v8f64_mask_cmpord_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmpord_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmpord_pd_mask
           end function v8f64_mask_cmpord_pd_mask
        end interface

        interface
           function v8f64_cmpnlt_pd_mask(a,b) &
                bind(c,name='v8f64_cmpnlt_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmpnlt_pd_mask
           end function v8f64_cmpnlt_pd_mask
        end interface

        interface
           function v8f64_mask_cmpnlt_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmpnlt_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmpnlt_pd_mask
           end function v8f64_mask_cmpnlt_pd_mask
        end interface

        interface
           function v8f64_cmpnle_pd_mask(a,b) &
                bind(c,name='v8f64_mask_cmpnle_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmpnle_pd_mask
           end function v8f64_cmpnle_pd_mask
        end interface

        interface
           function v8f64_mask_cmpnle_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmpnle_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmpnle_pd_mask
           end function v8f64_mask_cmpnle_pd_mask
        end interface

        interface
           function v8f64_cmpneq_pd_mask(a,b) &
                bind(c,name='v8f64_cmpneq_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmpneq_pd_mask
           end function v8f64_cmpneq_pd_mask
        end interface

        interface
           function v8f64_mask_cmpneq_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmpneq_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmpneq_pd_mask
           end function v8f64_mask_cmpneq_pd_mask
        end interface

        interface
           function v8f64_cmplt_pd_mask(a,b) &
                bind(c,name='v8f64_cmplt_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmplt_pd_mask
           end function v8f64_cmplt_pd_mask
        end interface

        interface
           function v8f64_mask_cmplt_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmplt_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmplt_pd_mask
           end function v8f64_mask_cmplt_pd_mask
        end interface

        interface
           function v8f64_cmple_pd_mask(a,b) &
                bind(c,name='v8f64_cmple_pd_mask')
                import :: v8f64
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_cmple_pd_mask
           end function v8f64_cmple_pd_mask
        end interface

        interface
           function v8f64_mask_cmple_pd_mask(k1,a,b) &
                bind(c,name='v8f64_mask_cmple_pd_mask')
                import :: v8f64
                integer(c_char),  intent(in), value :: k1
                type(v8f64),      intent(in)        :: a
                type(v8f64),      intent(in)        :: b
                integer(c_char) :: v8f64_mask_cmple_pd_mask
           end function v8f64_mask_cmple_pd_mask
        end interface

        interface
           function v8f64_mask_rcp14_pd(src,k,a) &
                bind(c,name='v8f64_mask_rcp14_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                type(v8f64) :: v8f64_mask_rcp14_pd
           end function v8f64_mask_rcp14_pd
        end interface

        interface
           function v8f64_maskz_rcp14_pd(k,a) &
                bind(c,name='v8f64_maskz_rcp14_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                type(v8f64) :: v8f64_maskz_rcp14_pd
           end function v8f64_maskz_rcp14_pd
        end interface

        interface
           function v8f64_rcp14_pd(a) &
                bind(c,name='v8f64_rcp14_pd')
                import :: v8f64
                type(v8f64),  intent(in) :: a
                type(v8f64) :: v8f64_rcp14_pd
           end function v8f64_rcp14_pd
        end interface

        interface
           function v8f64_mask_rsqrt14_pd(src,k,a) &
                bind(c,name='v8f64_mask_rsqrt14_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                type(v8f64) :: v8f64_mask_rsqrt14_pd
           end function v8f64_mask_rsqrt14_pd
        end interface

        interface
           function v8f64_maskz_rsqrt14_pd(k,a) &
                bind(c,name='v8f64_maskz_rsqrt14_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                type(v8f64) :: v8f64_maskz_rsqrt14_pd
           end function v8f64_maskz_rsqrt14_pd
        end interface

        interface
           function v8f64_rsqrt14_pd(a) &
                bind(c,name='v8f64_rsqrt14_pd')
                import :: v8f64
                type(v8f64),   intent(in) :: a
                type(v8f64) :: v8f64_rsqrt14_pd
           end function v8f64_rsqrt14_pd
        end interface

        interface
           function v8f64_mask_sqrt_pd(src,k,a) &
                bind(c,name='v8f64_mask_sqrt_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                type(v8f64) :: v8f64_mask_sqrt_pd
           end function v8f64_mask_sqrt_pd
        end interface
